fix(calculator mobile): fix bug on mobile on final step add max height body and code in js

--- a/src/sass/layouts/_popup.sass
+++ b/src/sass/layouts/_popup.sass
@@ -313,6 +313,8 @@
                         .popup__body
                             display: flex
                             overflow: inherit
+                            &.mobile-final-clamp
+                                max-height: 260px
                             &.final-step-hidden
                                 display: none
                             .input-wrapper
